...
     - Returns: A String with an error message if invalid, otherwise nil
    */
    func validateFields() -> String? {
        // Check all fields have data
        if  emailTextField.text?.trimmingCharacters(in: .whitespacesAndNewlines) == "" ||
            passwordTextField.text?.trimmingCharacters(in: .whitespacesAndNewlines) == "" {
            return "Please fill in all fields"
        }
        return nil
    }

    /**
    Sets error label to the given String
...
